--- a/netdisk/templates/netdisk/index.html
+++ b/netdisk/templates/netdisk/index.html
@@ -10,15 +10,47 @@
 
 <h2>这里是云盘</h2>
 
-上传文件：<input type="file" name="file">
+<form action="{% url 'netdisk:upload' %}" method="post" enctype="multipart/form-data" style="float: left">
+    上传文件：<input type="file" name="file">
+    <input type="hidden" value="{{ root.id }}" name="dir_id">
+    <button>上传</button>
+    {% csrf_token %}
+</form>
+
+
+<form action="{% url 'netdisk:create_dir' %}" style="float: left;margin-left: 100px" method="post">
+    <input type="hidden" value="{{ root.id }}" name="present_dir_id">
+    目录名：<input type="text" name="dir_name">
+    <button>新建目录</button>
+    {% csrf_token %}
+</form>
+
+<br>
 
 <hr>
 
-<div>
+{% for dir in dirs %}
+<div style="float: left;width: 150px;margin-right: 10px">
     <div><a href=""><img src="/static/image/folder.jpg" style="height:120px"></a></div>
-    <div><span>文件名</span></div>
-    <div><span>2018-2-12</span></div>
+    <div><span>{{ dir.dir_name }}</span></div>
+    <div><span>{{ dir.create_time|date:'Y-m-d' }}</span></div>
 </div>
+{% endfor %}
+
+{% for file in files %}
+    <div style="float: left;width: 150px;margin-right: 10px">
+    <div><a href="">
+        <!-- 文件类型的判断：in方法 -->
+        {% if file.file_type in 'pdftxtzip' %}
+            <img src="/static/image/{{ file.file_type }}.jpg" style="height:120px">
+        {% else %}
+            <img src="/static/image/unknow.jpg" style="height:120px">
+        {% endif %}
+    </a></div>
+    <div><span>{{ file.file_name }}</span></div>
+    <div><span>{{ file.upload_time|date:'Y-m-d' }}</span></div>
+</div>
+{% endfor %}
 
 </body>
 </html>
