--- a/templates/banner.html
+++ b/templates/banner.html
@@ -10,4 +10,7 @@
 <a href="{% url 'finance:index' %}">账务管理</a>
 <a href="{% url 'netdisk:index' %}">云盘</a>
 
+
+<a href="{% url 'user:active_email' %}">激活邮箱</a>
+
 <hr>
