--- a/user/templates/register.html
+++ b/user/templates/register.html
@@ -10,10 +10,26 @@
 
 <h1>注册账户</h1>
 <form action="." method="post">
-    {{ register_form.as_p }}
+{#    {{ register_form.as_p }}#}
+    
+    <!-- form表单可以自动渲染，也可以手动渲染，也可以直接写input标签，只要name属性能对上就行 -->
+    <p><label>用户名：{{ register_form.username }}</label></p>
+    <p><label>昵称：{{ register_form.nick_name }}</label></p>
+    <p><label>密码：{{ register_form.password }}</label></p>
+    <p><label>再次输入密码：<input type="password" name="password2"></label></p>
+    <div class="form-group">
+{#        {{ register_form.captcha.errors }}#}
+        {{ register_form.captcha.label_tag }}
+        {{ register_form.captcha }}
+    </div>
+
     {% csrf_token %}
     <button>提交</button>
 </form>
+
+{% for key,value in register_form.errors.items %}
+    {{ value }}
+{% endfor %}
 
 </body>
 </html>
