--- a/finance/templates/finance_info.html
+++ b/finance/templates/finance_info.html
@@ -100,7 +100,7 @@ Page {{ records.number }} / {{ records.paginator.num_pages }}
 </body>
 
 <script src="/static/js/jquery3.4.1.js"></script>
-<script src="/static/js/echarts-en.common.js"></script>
+<script src="/static/js/echarts-en.simple.min.js"></script>
 <script>
 
     // 初始化echarts实例
